tests/errors/parameter_declared1.f90
program parameter_declared1
    implicit real(a-h, o-z)
    parameter (a = 3.14)
    print *, a
end program